# serializer version: 1
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.612481 |   0.048795 |  -0.203045 |    0.05959  |    -0.019833 |  -0.308957 |  -0.318303 |    0.207283 |        -0.270418 |     -0.050525 |      -0.035223 |
      |  2 |            2 | 2.20594 | -0.177755 |  -0.048327 |  -0.374231 |    0.005324 |     0.037915 |  -0.099926 |  -0.338862 |    0.156433 |        -0.345122 |      0.049537 |      -0.066715 |
      |  3 |            3 | 2.20594 |  0.059627 |   0.555659 |  -0.113656 |    0.030588 |     0.06252  |   0.935397 |   0.164176 |    0.074163 |         0.20878  |      0.020389 |       0.017997 |
      |  4 |            4 | 2.20594 |  0.462313 |   0.069913 |   0.133741 |    0.009329 |    -0.154182 |  -0.156061 |   0.075258 |    0.068025 |         0.016234 |     -0.022577 |      -0.036929 |
      |  5 |            5 | 2.20594 |  0.252087 |   0.059353 |  -0.060378 |    0.114951 |     0.073087 |  -0.046875 |  -0.318106 |    0.155019 |        -0.047245 |     -0.078985 |      -0.041455 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 | 0.15574  |   0.054544 |   0.079696 |    0.143684 |     0.119631 |   0.110675 |   0.157821 |    0.176166 |         0.067901 |      0.12421  |       0.073996 |
      |  2 |            2 |      0 | 0.094184 |   0.046677 |   0.056147 |    0.092733 |     0.085074 |   0.076757 |   0.127545 |    0.123229 |         0.047503 |      0.086175 |       0.056532 |
      |  3 |            3 |      0 | 0.188191 |   0.063397 |   0.075027 |    0.133371 |     0.134672 |   0.147675 |   0.186078 |    0.215629 |         0.084005 |      0.132319 |       0.066421 |
      |  4 |            4 |      0 | 0.147717 |   0.059413 |   0.080132 |    0.090484 |     0.140955 |   0.079793 |   0.145984 |    0.206537 |         0.052087 |      0.091715 |       0.058336 |
      |  5 |            5 |      0 | 0.11314  |   0.058661 |   0.079085 |    0.101414 |     0.114676 |   0.104065 |   0.224855 |    0.252116 |         0.05738  |      0.115453 |       0.076105 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |  -0.796772 |  -0.139912 |  -0.153361 |    -0.413072 |
      |  2 |            2 | 2.20594 |  -0.515803 |  -0.130834 |  -0.18083  |    -0.374261 |
      |  3 |            3 | 2.20594 |   0.528086 |   1.04504  |   0.080532 |     0.361985 |
      |  4 |            4 | 2.20594 |   0.614339 |  -0.095227 |   0.073899 |    -0.127948 |
      |  5 |            5 | 2.20594 |   0.050358 |   0.151681 |   1.4e-05  |    -0.140601 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |           -0 |
      |  5 |            5 |      0 |          0 |          0 |          0 |           -0 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.337094 |   0.009722 |  -0.021973 |    0.037009 |    -0.08685  |  -0.144811 |  -0.23839  |   -0.056259 |        -0.337094 |     -0.180769 |      -0.146608 |
      |  2 |            2 | 2.20594 | -0.225046 |  -0.025753 |  -0.117479 |   -0.05132  |    -0.071272 |  -0.00509  |  -0.162632 |   -0.075391 |        -0.225046 |     -0.130607 |      -0.112092 |
      |  3 |            3 | 2.20594 |  0.287922 |   0.120306 |  -0.117593 |   -0.06249  |     0.348171 |   0.804091 |   0.393572 |    0.131953 |         0.287922 |     -0.100838 |      -0.077377 |
      |  4 |            4 | 2.20594 |  0.160383 |   0.036444 |   0.199727 |    0.046141 |     0.131281 |  -0.176979 |   0.071346 |   -0.041392 |         0.160383 |     -0.025295 |      -0.096977 |
      |  5 |            5 | 2.20594 |  0.022379 |  -0.151356 |   0.188623 |    0.033073 |     0.127528 |   0.067483 |   0.006497 |    0.026087 |         0.022379 |     -0.118542 |      -0.162698 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 | 0.051455 |   0.066061 |   0.059751 |    0.082972 |     0.053063 |   0.069697 |   0.060032 |    0.061869 |         0.051455 |      0.057322 |       0.031409 |
      |  2 |            2 |      0 | 0.039629 |   0.046841 |   0.04731  |    0.09762  |     0.052171 |   0.04932  |   0.050543 |    0.075239 |         0.039629 |      0.032853 |       0.029906 |
      |  3 |            3 |      0 | 0.084573 |   0.143381 |   0.148537 |    0.075545 |     0.074961 |   0.140237 |   0.098611 |    0.070795 |         0.084573 |      0.140785 |       0.104128 |
      |  4 |            4 |      0 | 0.031261 |   0.066519 |   0.057718 |    0.082823 |     0.051396 |   0.053605 |   0.046519 |    0.076745 |         0.031261 |      0.042677 |       0.076807 |
      |  5 |            5 |      0 | 0.026034 |   0.057615 |   0.062432 |    0.024765 |     0.041316 |   0.047593 |   0.047619 |    0.038698 |         0.026034 |      0.039275 |       0.083837 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |  -0.647914 |  -0.24186  |  -0.183472 |    -0.429872 |
      |  2 |            2 | 2.20594 |  -0.534311 |  -0.050468 |  -0.113543 |    -0.503405 |
      |  3 |            3 | 2.20594 |   0.773499 |   0.904996 |   0.104951 |     0.232194 |
      |  4 |            4 | 2.20594 |   0.493528 |  -0.098202 |   0.032454 |     0.037282 |
      |  5 |            5 | 2.20594 |  -0.092411 |   0.19473  |  -0.040981 |     0.000115 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |            0 |
      |  5 |            5 |      0 |         -0 |          0 |         -0 |            0 |
    ''',
  })
# ---
